<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <groupId>com.insurance.uw</groupId>
    <artifactId>underwriting-system</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Underwriting System</name>
    <description>核保配置化系统 - DDD架构</description>

    <modules>
        <module>underwriting-engine-core</module>
        <module>underwriting-common</module>
        <module>underwriting-domain</module>
        <module>underwriting-application</module>
        <module>underwriting-infrastructure</module>
        <module>underwriting-interfaces</module>
        <module>underwriting-feature-sdk</module>
        <module>underwriting-bootstrap</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <groovy.version>3.0.20</groovy.version>
        <resilience4j.version>1.7.1</resilience4j.version>
        <httpclient5.version>5.2.1</httpclient5.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2021.0.9</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>${groovy.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-circuitbreaker</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents.client5</groupId>
                <artifactId>httpclient5</artifactId>
                <version>${httpclient5.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>3.1.8</version>
            </dependency>
            <!-- internal modules -->
            <dependency>
                <groupId>com.insurance.uw</groupId>
                <artifactId>underwriting-engine-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.insurance.uw</groupId>
                <artifactId>underwriting-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.insurance.uw</groupId>
                <artifactId>underwriting-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.insurance.uw</groupId>
                <artifactId>underwriting-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.insurance.uw</groupId>
                <artifactId>underwriting-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.insurance.uw</groupId>
                <artifactId>underwriting-feature-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.insurance.uw</groupId>
                <artifactId>underwriting-interfaces</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
